// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nodeAppGenerator .eslintrc.json matches snapshot 1`] = `
{
  "extends": [
    "../../.eslintrc.json",
  ],
  "ignorePatterns": [
    "node_modules",
  ],
  "overrides": [
    {
      "files": [
        "jest.config.ts",
        "test/**/*.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "parserOptions": {
        "project": [
          "packages/node-app/tsconfig.spec.json",
        ],
      },
    },
    {
      "excludedFiles": [
        "jest.config.ts",
        "test/**/*.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "files": [
        "*.ts",
      ],
      "parserOptions": {
        "project": [
          "packages/node-app/tsconfig.app.json",
        ],
      },
    },
  ],
}
`;

exports[`nodeAppGenerator jest.config.ts matches snapshot 1`] = `
"export default {
  displayName: "node-app",
  preset: "../../jest.preset.js",
    globals: {
    "ts-jest": {
      tsconfig: "<rootDir>/tsconfig.spec.json",
    },
  },
      testEnvironment: "node",
    transform: {
        "^.+\\\\.[tj]s$": "ts-jest",
      },
    moduleFileExtensions: ["ts", "js", "html", "json"],
    coverageDirectory: "../../reports/coverage/packages/node-app",
  reporters: [
    "default",
    [
      "jest-junit",
      {
        addFileAttribute: "true",
        classNameTemplate: "{suitename}",
        outputDirectory: "reports/junit",
        outputName: "node-app.xml",
      },
    ],
  ],
};
"
`;

exports[`nodeAppGenerator project.json matches snapshot 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "node-app",
  "projectType": "application",
  "sourceRoot": "packages/node-app/src",
  "tags": [],
  "targets": {
    "build": {
      "configurations": {
        "development": {},
        "production": {},
      },
      "defaultConfiguration": "production",
      "executor": "@nx/webpack:webpack",
      "options": {
        "assets": [
          "packages/node-app/src/assets",
        ],
        "compiler": "tsc",
        "isolatedConfig": true,
        "main": "packages/node-app/src/main.ts",
        "outputPath": "dist/packages/node-app",
        "target": "node",
        "tsConfig": "packages/node-app/tsconfig.app.json",
        "webpackConfig": "packages/node-app/webpack.config.js",
      },
      "outputs": [
        "{options.outputPath}",
      ],
    },
    "lint": {
      "executor": "@nx/linter:eslint",
      "options": {
        "lintFilePatterns": [
          "packages/node-app",
        ],
      },
      "outputs": [
        "{options.outputFile}",
      ],
    },
    "serve": {
      "configurations": {
        "development": {
          "buildTarget": "node-app:build:development",
        },
        "production": {
          "buildTarget": "node-app:build:production",
        },
      },
      "defaultConfiguration": "development",
      "executor": "@nx/js:node",
      "options": {
        "buildTarget": "node-app:build",
      },
    },
    "test": {
      "configurations": {
        "ci": {
          "ci": true,
          "codeCoverage": true,
        },
      },
      "executor": "@nx/jest:jest",
      "options": {
        "jestConfig": "packages/node-app/jest.config.ts",
        "passWithNoTests": true,
      },
      "outputs": [
        "reports/coverage/packages/node-app",
        "reports/junit/node-app.xml",
      ],
    },
  },
}
`;

exports[`nodeAppGenerator tsconfig.app.json or tsconfig.lib.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "declaration": true,
    "types": [
      "node",
    ],
  },
  "exclude": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "test",
  ],
  "extends": "./tsconfig.json",
  "include": [
    "**/*.ts",
  ],
}
`;

exports[`nodeAppGenerator tsconfig.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "lib": [
      "es2022",
    ],
    "module": "commonjs",
    "outDir": "../../dist/out-tsc",
    "target": "es2022",
  },
  "extends": "../../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.app.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`nodeAppGenerator tsconfig.spec.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "types": [
      "jest",
      "node",
    ],
  },
  "extends": "./tsconfig.json",
  "include": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "**/*.d.ts",
    "test",
  ],
}
`;

exports[`nodeAppGenerator webpack.config.js webpack.config.js matches snapshot 1`] = `
"const { composePlugins, withNx } = require('@nx/webpack');

// Nx plugins for webpack.
module.exports = composePlugins(withNx(), (config) => {
  // Update the webpack config as needed here.
  // e.g. \`config.plugins.push(new MyPlugin())\`
  return config;
});
"
`;
